--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "reflect-metadata": "^0.2.2"
   }
 }
