--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.7.4",
-    "jest": "^30.2.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.1",
